--- a/.github/workflows/build_and_deploy_lambda.yml
+++ b/.github/workflows/build_and_deploy_lambda.yml
@@ -72,6 +72,7 @@ jobs:
                   ${{ runner.os }}-node-
 
             - name: Install dependencies
+              if: steps.cache.outputs.cache-hit != 'true'
               run: npm install
 
             - name: Build Artifact
